[project]
name = "vpn-registration"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "loguru>=0.7.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
